--- a/index.html
+++ b/index.html
@@ -2,24 +2,50 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
+    <title>It's Responsive Beesh</title>
+    <meta name="description" content="Page description">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="row">
-    <div class="header col-md-12">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+  <div class="container-fluid">
+
+  <div class="row">
+    <div class="hero col-md-12 text-center">
+      <h2 class="headline">Header</h2>
+      <p> ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptatum nesciunt enim autem! Et autem, optio, dolore, harum commodi culpa neque deserunt quibusdam soluta vitae consequatur tenetur adipisci ab omnis.</p>
     </div>
     </div>
 
   <div class="row">
-    <div class="hero col-md-12">
-    </div>
-    </div>
+    <div class="box1 col-sm-4">
 
-  <div class="row">
-    <div class="box1 col-sm-4"></div>
+    </div>
     <div class="box2 col-sm-4"></div>
     <div class="box3 col-sm-4"> </div>
     </div>
